# RustChat

./: Cargo.toml  LICENSE
database/pb_data/: data.db  logs.db
database/pb_migrations/: 1673214200_collections_snapshot.js
src/: chat_server.rs  client_handler.rs  main.rs  msg_types.rs  server_utils.rs  udp_chat_server.rs
