[package]
name = "rust_chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc64 = "2.0.0"
pocketbase-sdk = "0.0.7"
tokio = { version = "1.24.1", features = ["full"] }
winconsole = "0.11.1"
